--- a/index.html
+++ b/index.html
@@ -7,9 +7,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="favicon.ico" />
     <!--app-head-->
-    <!-- <script src="https://polyfill.io/v3/polyfill.min.js" defer></script> -->
+    <link
+      rel="preload"
+      href="/static/fonts/Golos-Text-Regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="/static/fonts/Golos-Text-Bold.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="/static/fonts/Golos-Text-DemiBold.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
   </head>
   <body>
+    <script>
+      window.data = {
+        meta: {
+          ava: '/static/img/ava.avif',
+          username: 'a-petrova',
+          time: '4 ч.'
+        },
+        stories: [
+          {
+            type: 'video',
+            src: '/static/stories/race.mp4'
+          },
+          {
+            type: 'image',
+            src: '/static/stories/spacex.avif'
+          },
+          {
+            type: 'video',
+            src: '/static/stories/soccer.mp4'
+          },
+          {
+            type: 'image',
+            src: '/static/stories/chemistry.avif'
+          }
+        ]
+      }
+    </script>
     <div id="app" class="app"><!--app-html--></div>
 
     <script type="module" src="/src/entry-client.jsx"></script>
